# python-hypermodern-python

./: .flake8  .gitignore  .pylintrc  README.md  noxfile.py  pyproject.toml
.github/workflows/: tests.yml
src/hypermodern_python/: console.py  wikipedia.py
tests/: conftest.py  test_console.py  test_wikipedia.py
