[tool.poetry]
name = "hypermodern_python"
version = "0.1.0"
description = "The hypermodern Python project"
authors = ["algot <algot@ua.fm>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
click = "^8.1.3"
requests = "^2.28.0"
pytest = "^7.1.2"

[tool.poetry.dev-dependencies]
autopep8 = "^1.6.0"
pytest-cov = "^3.0.0"
coverage = {extras = ["toml"], version = "^6.4.1"}
pytest-mock = "^3.7.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
hypermodern-python = "src.hypermodern_python.console:main"

[tool.coverage.report]
fail_under = 100