[tool.poetry]
name = "hypermodern_python"
version = "0.1.0"
description = "The hypermodern Python project"
authors = ["algot <algot@ua.fm>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
click = "^8.1.3"
requests = "^2.28.0"
pytest = "^7.1.2"
desert = "^2020.11.18"
marshmallow = "^3.16.0"

[tool.poetry.dev-dependencies]
autopep8 = "^1.6.0"
pytest-cov = "^3.0.0"
coverage = {extras = ["toml"], version = "^6.4.1"}
pytest-mock = "^3.7.0"
black = "^22.3.0"
flake8 = "^4.0.1"
flake8-bandit = "^3.0.0"
flake8-black = "^0.3.3"
flake8-bugbear = "^22.4.25"
flake8-import-order = "^0.18.1"
safety = "^1.10.3"
mypy = "^0.961"
types-requests = "^2.27.31"
pytype = {version = "^2022.6.14", python = "3.10"}
typeguard = "^2.13.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
hypermodern-python = "src.hypermodern_python.console:main"

[tool.coverage.report]
fail_under = 80